kubernetes/business-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bca-svc-business
  namespace: beyond
  labels:
    k8s-app: bca-svc-business
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: bca-svc-business
  template:
    metadata:
      labels:
        k8s-app: bca-svc-business
    spec:
      imagePullSecrets:
        - name: aliyun-secret
      containers:
        - name: seata-server
          image: registry.cn-shenzhen.aliyuncs.com/lucifer-public/bca-svc-business:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 10000
