kubernetes/storage-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bca-svc-storage
  namespace: beyond
  labels:
    k8s-app: bca-svc-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: bca-svc-storage
  template:
    metadata:
      labels:
        k8s-app: bca-svc-storage
    spec:
      imagePullSecrets:
        - name: aliyun-secret
      containers:
        - name: bca-svc-storage
          image: registry.cn-shenzhen.aliyuncs.com/lucifer-public/bca-svc-storage:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 10003
          livenessProbe:
            httpGet:
              scheme: HTTP
              port: 10003
              path: /actuator/health
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              scheme: HTTP
              port: 10003
              path: /actuator/health
            initialDelaySeconds: 6
            periodSeconds: 6
