kubernetes/business-service-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: bca-svc-business
  namespace: beyond
spec:
  selector:
    k8s-app: bca-svc-business
  type: ClusterIP
  ports:
    - port: 10000
      name: api
      targetPort: 10000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bca-svc-business
  namespace: beyond
spec:
  rules:
    - host: beyond.lucifer.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bca-svc-business
                port:
                  number: 10000
